Accessibility changes: - Removed 'text-decoration: none' so that links can easily be identified as links - Changed the color scheme a bit so that some of the colors were better contrasted against the light background - Went through to make sure I used the right semantic html elements and everything made sense

--- a/src/styles/indexPage.css
+++ b/src/styles/indexPage.css
@@ -18,10 +18,14 @@
   align-items: center;
   margin: 2px;
   padding: 50px;
+  color: black;
+}
+
+.pageLink a:visited {
+  color: black;
 }
 
 .pageLink span {
-  color: black;
   background-color: rgba(78,165,217, 0.8);
   font-size: 1.2rem;
   font-weight: 400;
